spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,11 @@ dark shade   - 2E3339
     body {
         background-color: #93A48F;
         display: grid;
-        height: 100%;
         grid-template-areas: "header" "subTitle1" "uniAssignment1" "subTitle2" "personalProject1" "image1" "personalProject2" "image2";
+        
         align-items: center;
         margin: 0px;
+        
     }
 }
 
@@ -22,10 +23,9 @@ dark shade   - 2E3339
     body {
         background-color: #93A48F;
         display: grid;
-        height: 100%;
         grid-template-areas: "header header" "subTitle1 subTitle1" "uniAssignment1 uniAssignment1" "subTitle2 subTitle2" "personalProject1 image1" "personalProject2 image2";
-        grid-template-rows: 1fr 1fr 5fr 1fr 5fr 5fr;
-        grid-template-columns: 11fr 9fr;
+        
+        grid-template-columns: 5fr 4fr;
         align-items: center;
         margin: 0px;
     }
@@ -69,18 +69,19 @@ dark shade   - 2E3339
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
     background-size: cover;
-    height: 100%;
     box-sizing: border-box;
     border: 5px double #78BF58;
-    
+    height: 100%;
 }
 
 .subTitle {
     text-align: center;
     background-color: #2E3339;
     color: #F5F7F6;
-    height: 100%;
+   
     box-sizing: border-box;
+    
+    height: 100%;
 }
 
 .project {
@@ -90,7 +91,10 @@ dark shade   - 2E3339
     font-size: medium;
     margin: 0;
     background-size: cover;
-    height: 100%;
+    
+    box-sizing: border-box;
+
+    max-height: 100%;
 }
 
 .project p {
@@ -105,21 +109,17 @@ dark shade   - 2E3339
 .projectImage {
     font-family: Arial, Helvetica, sans-serif;
     font-size: large;
-    padding: 0;
-    margin: 0;
     background-color: #93A48F;
     background-size: cover;
-    height: 100%;
+    box-sizing: border-box;
 }
 
 .projectImage img {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .projectImage p {
-    padding: 0px;
-    padding-left: 5px;
-    margin: 0px;
+
     font-size: x-small;
 }
